--- a/src/styles/FullApp.css
+++ b/src/styles/FullApp.css
@@ -14,14 +14,14 @@
 }
 
 .FullApp-content .panel-content {
-    padding: 0 10px 10px 10px;
+    /*padding: 0 10px 10px 10px;*/
+    padding: 5px;
     text-align: left;
 }
 
 .FullApp-content .dashboard-panel {
     text-align: left;
 }
-
 
 .FullApp-content .divider {
     margin: 20px 0px !important;
